@@ -117,9 +117,9 @@ public class ProxySettingsManagerTest extends RhnBaseTestCase {
         assertEquals("/usr/bin/sudo", cmdArgs[0]);
         assertEquals("/usr/bin/rhn-config-satellite.pl", cmdArgs[1]);
         assertTrue(cmdArgs[2].startsWith("--target="));
-        assertEquals("--option=server.satellite.http_proxy=%s".formatted(TEST_HOSTNAME), cmdArgs[3]);
-        assertEquals("--option=server.satellite.http_proxy_username=%s".formatted(TEST_USERNAME), cmdArgs[4]);
-        assertEquals("--option=server.satellite.http_proxy_password=%s".formatted(TEST_PASSWD), cmdArgs[5]);
+        assertEquals(String.format("--option=server.satellite.http_proxy=%s", TEST_HOSTNAME), cmdArgs[3]);
+        assertEquals(String.format("--option=server.satellite.http_proxy_username=%s", TEST_USERNAME), cmdArgs[4]);
+        assertEquals(String.format("--option=server.satellite.http_proxy_password=%s", TEST_PASSWD), cmdArgs[5]);
         assertEquals("2>&1", cmdArgs[6]);
         assertEquals(">", cmdArgs[7]);
         assertEquals("/dev/null", cmdArgs[8]);
@@ -153,14 +153,14 @@ public class ProxySettingsManagerTest extends RhnBaseTestCase {
         assertEquals("-E", cmdArgs[1]);
         assertEquals("/usr/bin/rhn-config-satellite.pl", cmdArgs[2]);
         assertTrue(cmdArgs[3].startsWith("--target="));
-        assertEquals("--option=server.satellite.http_proxy=%s".formatted(TEST_HOSTNAME), cmdArgs[4]);
-        assertEquals("--option=server.satellite.http_proxy_username=%s".formatted(TEST_USERNAME), cmdArgs[5]);
+        assertEquals(String.format("--option=server.satellite.http_proxy=%s", TEST_HOSTNAME), cmdArgs[4]);
+        assertEquals(String.format("--option=server.satellite.http_proxy_username=%s", TEST_USERNAME), cmdArgs[5]);
         assertEquals("--option=server.satellite.http_proxy_password=PWD_PLACEHOLDER", cmdArgs[6]);
         assertEquals("2>&1", cmdArgs[7]);
         assertEquals(">", cmdArgs[8]);
         assertEquals("/dev/null", cmdArgs[9]);
 
-        assertEquals("UYUNICFG_PWD_PLACEHOLDER=%s".formatted(TEST_PASSWD), configCommand.getFirstEnvironmentVar());
+        assertEquals(String.format("UYUNICFG_PWD_PLACEHOLDER=%s", TEST_PASSWD), configCommand.getFirstEnvironmentVar());
     }
 
     @Test
@@ -175,7 +175,7 @@ public class ProxySettingsManagerTest extends RhnBaseTestCase {
         assertEquals("/usr/bin/rhn-config-satellite.pl", cmdArgs[1]);
         assertTrue(cmdArgs[2].startsWith("--target="));
         assertEquals("--option=server.satellite.http_proxy=", cmdArgs[3]);
-        assertEquals("--option=server.satellite.http_proxy_username=%s".formatted(TEST_USERNAME), cmdArgs[4]);
+        assertEquals(String.format("--option=server.satellite.http_proxy_username=%s", TEST_USERNAME), cmdArgs[4]);
         assertEquals("2>&1", cmdArgs[5]);
         assertEquals(">", cmdArgs[6]);
         assertEquals("/dev/null", cmdArgs[7]);
@@ -197,6 +197,6 @@ public class ProxySettingsManagerTest extends RhnBaseTestCase {
         assertEquals(">", cmdArgs[6]);
         assertEquals("/dev/null", cmdArgs[7]);
 
-        assertEquals("UYUNICFG_PWD_PLACEHOLDER=%s".formatted(TEST_PASSWD), configCommand.getFirstEnvironmentVar());
+        assertEquals(String.format("UYUNICFG_PWD_PLACEHOLDER=%s", TEST_PASSWD), configCommand.getFirstEnvironmentVar());
     }
 }
